[gd_scene load_steps=5 format=3 uid="uid://dsmlvtmaxftc0"]

[ext_resource type="FontFile" uid="uid://drvp2bgeyn50f" path="res://assets/fonts/default_font.png" id="1_45rwr"]
[ext_resource type="Script" path="res://GUI/death_screen/death_screen.gd" id="1_qbyam"]
[ext_resource type="Texture2D" uid="uid://dhspr6h2g55xb" path="res://assets/sprites/player.png" id="2_6h6rm"]
[ext_resource type="FontFile" uid="uid://df6bu6cgyxf6v" path="res://assets/fonts/small_font.png" id="3_hjye3"]

[node name="DeathScreen" type="CanvasLayer"]
layer = 10
script = ExtResource("1_qbyam")

[node name="ColorRect2" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0784314, 0.0784314, 0.0784314, 0.537255)

[node name="ColorRect3" type="ColorRect" parent="."]
anchors_preset = -1
anchor_left = 0.29
anchor_top = 0.29
anchor_right = 0.71
anchor_bottom = 0.71
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = -1
anchor_left = 0.3
anchor_top = 0.3
anchor_right = 0.7
anchor_bottom = 0.7
offset_top = 1.0
offset_right = 2.0
offset_bottom = -2.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.447047, 0.218706, 0.134241, 1)

[node name="PointsLabel" type="Label" parent="."]
anchors_preset = -1
anchor_left = 0.348
anchor_top = 0.51
anchor_right = 0.66
anchor_bottom = 0.543
offset_left = 0.631958
offset_top = 0.319946
offset_right = -0.560059
offset_bottom = -0.0240479
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_45rwr")
theme_override_font_sizes/font_size = 25
text = "YOUR POINTS: 1500"

[node name="Label" type="Label" parent="."]
anchors_preset = -1
anchor_left = 0.365
anchor_top = 0.346
anchor_right = 0.642
anchor_bottom = 0.401
offset_left = 0.409973
offset_top = 0.271973
offset_right = 0.0279541
offset_bottom = 0.0319824
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.891291, 4.18738e-06, 8.66354e-07, 1)
theme_override_fonts/font = ExtResource("1_45rwr")
theme_override_font_sizes/font_size = 42
text = "YOU DIED!"

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(675, 263)
scale = Vector2(3.54688, 3.54688)
texture = ExtResource("2_6h6rm")
hframes = 27
vframes = 4
frame = 31

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = -1
anchor_left = 0.382
anchor_top = 0.568
anchor_right = 0.623
anchor_bottom = 0.659
offset_left = 0.187988
offset_top = -0.223999
offset_right = -0.0180054
offset_bottom = -0.11203
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="MainTitleButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
theme_override_fonts/font = ExtResource("3_hjye3")
theme_override_font_sizes/font_size = 12
text = "Back to Main Title
"

[node name="ExitButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
theme_override_constants/h_separation = 0
theme_override_fonts/font = ExtResource("3_hjye3")
theme_override_font_sizes/font_size = 12
text = "Exit
"

[connection signal="pressed" from="VBoxContainer/MainTitleButton" to="." method="_on_main_title_button_pressed"]
[connection signal="pressed" from="VBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
